frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  type: NodePort
  selector:
    app: frontend
    version: v4.4
  ports:
   - port: 80
     targetPort: 8080
     nodePort: 30080
